# c-snake-raylib

./: .gitignore  build.sh  build.zig  build.zig.zon  meson.build
.zig-cache/o/4857b6f366272bbffd0b5a073e55c765/: c-raylib
.zig-cache/o/806f956b14d5899a1fc355660d706e7f/: dependencies.zig
.zig-cache/o/819e9eff7c7f2479f987b5b76cb1b166/: dependencies.zig
src/: SnakeBody.c  SnakeBody.h  main.c
